# skep

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  codenames.json  llms.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json  tsconfig.consumer.json  tsconfig.json
.github/workflows/: ci.yml  release-please.yml
docs/: getting-started.md  index.md  the-model.md
examples/code-browser/: mock-mind.ts  run.ts
examples/code-browser/cells/fs/: file.ts  folder.ts  helpers.ts  index.ts
scripts/: fix-dts-extensions.mjs
src/agents/: json.ts  llm.ts
src/framework/: cell.ts  index.ts  markup.ts  runtime.ts  skep.ts  types.ts
src/framework/debug/: tui.ts
src/framework/renderers/: briefing.ts  tui.ts
test/: agents.test.ts  example.test.ts  exports.test.ts  markup.test.ts  runtime.test.ts
test/types/: consumer.ts
